| Summary: | ASTERISK-30369: res_pjsip: Websockets from same IP shut down when they shouldn't be | ||||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||||
| Date Opened: | 2022-12-21 14:02:24.000-0600 | Date Closed: | 2023-01-03 10:46:15.000-0600 | ||||
| Priority: | Major | Regression? | Yes | ||||
| Status: | Closed/Complete | Components: | Resources/res_pjsip | ||||
| Versions: | 18.15.1 20.0.1 | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | From https://community.asterisk.org/t/endpoints-become-unavaiable-every-few-minutes/95135/19
There seems to be a regression in the security fix we did for transport monitoring that is impacting Websockets. | ||||||
| Comments: | By: Amilcar Simões Silvestre (amilcarsilvestre) 2022-12-21 16:43:30.406-0600 This regression was introduced with the ASTERISK-30244 By: Friendly Automation (friendly-automation) 2023-01-03 10:46:15.672-0600 Change 19752 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19752|https://gerrit.asterisk.org/c/asterisk/+/19752] By: Friendly Automation (friendly-automation) 2023-01-03 10:46:54.101-0600 Change 19738 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19738|https://gerrit.asterisk.org/c/asterisk/+/19738] By: Friendly Automation (friendly-automation) 2023-01-03 10:47:21.626-0600 Change 19750 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19750|https://gerrit.asterisk.org/c/asterisk/+/19750] By: Friendly Automation (friendly-automation) 2023-01-03 11:45:40.984-0600 Change 19814 merged by Friendly Automation: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19814|https://gerrit.asterisk.org/c/asterisk/+/19814] By: Friendly Automation (friendly-automation) 2023-01-03 11:51:53.853-0600 Change 19739 merged by Friendly Automation: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19739|https://gerrit.asterisk.org/c/asterisk/+/19739] By: Friendly Automation (friendly-automation) 2023-01-04 05:13:39.410-0600 Change 19815 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19815|https://gerrit.asterisk.org/c/asterisk/+/19815] By: Friendly Automation (friendly-automation) 2023-01-04 05:13:51.526-0600 Change 19816 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19816|https://gerrit.asterisk.org/c/asterisk/+/19816] By: Friendly Automation (friendly-automation) 2023-01-04 05:14:01.686-0600 Change 19817 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19817|https://gerrit.asterisk.org/c/asterisk/+/19817] By: Friendly Automation (friendly-automation) 2023-01-04 06:52:20.498-0600 Change 19818 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19818|https://gerrit.asterisk.org/c/asterisk/+/19818] By: Friendly Automation (friendly-automation) 2023-01-04 06:52:44.831-0600 Change 19819 merged by George Joseph: res_pjsip_transport_websocket: Add remote port to transport [https://gerrit.asterisk.org/c/asterisk/+/19819|https://gerrit.asterisk.org/c/asterisk/+/19819] | ||||||